--- a/signmob/templates/users/user_detail.html
+++ b/signmob/templates/users/user_detail.html
@@ -9,10 +9,8 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
+      <h2>{{ object.name }}</h2>
+
     </div>
   </div>
 
