--- a/signmob/templates/users/user_form.html
+++ b/signmob/templates/users/user_form.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ user.username }}{% endblock %}
+{% block title %}{{ user.name }}{% endblock %}
 
 {% block content %}
-  <h1>{{ user.username }}</h1>
+  <h1>{{ user.name }}</h1>
   <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
     {% csrf_token %}
     {{ form|crispy }}
