--- a/signmob/templates/users/user_list.html
+++ b/signmob/templates/users/user_list.html
@@ -8,8 +8,8 @@
 
   <div class="list-group">
     {% for user in user_list %}
-      <a href="{% url 'users:detail' user.username %}" class="list-group-item">
-        <h4 class="list-group-item-heading">{{ user.username }}</h4>
+      <a href="{% url 'users:detail' pk=user.pk %}" class="list-group-item">
+        <h4 class="list-group-item-heading">{{ user.name }}</h4>
       </a>
     {% endfor %}
   </div>
