Fix leaflet image path

--- a/signmob/templates/leaflet/admin/widget.html
+++ b/signmob/templates/leaflet/admin/widget.html
@@ -3,5 +3,5 @@
 
 {% block vars %}
     {{ block.super }}
-    L.Icon.Default.imagePath = "{% static "leaflet/images" %}";
+    L.Icon.Default.imagePath = "{% static "leaflet/images" %}/";
 {% endblock vars %}
