--- a/signmob/templates/leaflet/admin/widget.html
+++ b/signmob/templates/leaflet/admin/widget.html
@@ -3,5 +3,7 @@
 
 {% block vars %}
     {{ block.super }}
-    L.Icon.Default.imagePath = "{% static "leaflet/images" %}/";
+    {% static "leaflet/images/marker-icon.png" as leaflet_img %}
+    {# Horrible hack to get the path, marker-icon.\w{12}.png #}
+    L.Icon.Default.imagePath = "{{ leaflet_img|slice:":-28" }}";
 {% endblock vars %}
