--- a/signmob/templates/base.html
+++ b/signmob/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}SignMob{% endblock title %}</title>
+    <title>{% block title %}{{ SITE_NAME }}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -36,12 +36,12 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'home' %}">SignMob</a>
+        <a class="navbar-brand" href="{% url 'home' %}">{{ SITE_NAME }}</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'home' %}">{% trans "Overview" %}</a>
             </li>
             {% if request.user.is_authenticated %}
               <li class="nav-item">
@@ -68,7 +68,7 @@
 
     </div>
 
-    <div class="container">
+    <div class="container mt-3">
 
       {% if messages %}
           {% for message in messages %}
