Add interaction views for group, location, event

--- a/signmob/static/sass/project.scss
+++ b/signmob/static/sass/project.scss
@@ -38,3 +38,13 @@ $red: #b94a48;
   border-color: $dark-pink;
   color: $red;
 }
+
+#detailmap {
+  width: 100%;
+  height: 40vh;
+}
+
+#smallmap {
+  width: 100%;
+  height: 300px;
+}
