--- a/signmob/collection/templates/collection/collectiongroup_detail.html
+++ b/signmob/collection/templates/collection/collectiongroup_detail.html
@@ -1,14 +1,36 @@
-{% extends "base.html" %}
+{% extends "collection/base.html" %}
 
 {% load i18n %}
+{% load leaflet_tags %}
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h2>Sammelgruppe „{{ object.name }}“</h2>
+  <h2 class="mt-3">Sammelgruppe „{{ object.name }}“</h2>
 
-  {% if object.description %}
-    <p>{{ object.description }}</p>
-  {% endif %}
+  <div class="row mt-3 mb-3">
+    <div class="col-md-6">
+      {% if object.description %}
+        <p>{{ object.description }}</p>
+      {% endif %}
+      {% if events %}
+        <h3>Nächste Sammeltermine</h3>
+        <ul>
+          {% for event in events %}
+            <li>
+              <a href="{{ event.get_absolute_url }}">
+                {{ event }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+      </div>
+      <div class="col-md-6">
+        {% if object.geo %}
+          {% leaflet_map "detailmap" callback="window.map_init_basic" %}
+        {% endif %}
+      </div>
+    </div>
 
   {% if request.user.is_authenticated %}
     {% if is_member %}
@@ -22,7 +44,7 @@
         </form>
     {% endif %}
   {% else %}
-    <div class="card mt-5">
+    <div class="card mt-5 mb-5">
       <div class="card-header">
         <h3>Tritt dieser Sammelgruppe bei</h3>
       </div>
@@ -39,4 +61,28 @@
       </div>
     </div>
   {% endif %}
+{% endblock %}
+
+{% block css %}
+  {{ block.super }}
+  {% leaflet_css %}
+{% endblock %}
+
+{% block javascript %}
+  {{ block.super }}
+
+  <script type="text/javascript">
+      function map_init_basic (map, options) {
+        var feature = {{ object.geo.geojson|safe }};
+        var latlng = feature.coordinates
+        latlng.reverse()
+        L.marker(latlng).addTo(map);
+        map.flyTo(latlng, 14)
+      }
+  </script>
+
+  {% leaflet_js %}
+  <script>
+    {% include "leaflet/_leaflet_image_path.html" %}
+  </script>
 {% endblock %}
