--- a/signmob/templates/base.html
+++ b/signmob/templates/base.html
@@ -36,13 +36,15 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'home' %}">{{ SITE_NAME }}</a>
+        <a class="navbar-brand" href="{% url 'collection:home' %}">{{ SITE_NAME }}</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">{% trans "Overview" %}</a>
-            </li>
+            {% comment %} <li class="nav-item active">
+              <a class="nav-link" href="{% url 'collection:home' %}">{% trans "Overview" %}</a>
+            </li> {% endcomment %}
+          </ul>
+          <ul class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
@@ -76,9 +78,7 @@
           {% endfor %}
       {% endif %}
 
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
+      {% block content %}{% endblock content %}
 
     </div> <!-- /container -->
 
