--- a/signmob/templates/leaflet/admin/widget.html
+++ b/signmob/templates/leaflet/admin/widget.html
@@ -3,12 +3,5 @@
 
 {% block vars %}
     {{ block.super }}
-    {% static "leaflet/images/marker-icon.png" as leaflet_img %}
-    
-    {% if debug %}
-        L.Icon.Default.imagePath = "{{ leaflet_img|slice:":-15" }}";
-    {% else %}
-        {# Horrible hack to get the path, marker-icon.\w{12}.png #}
-        L.Icon.Default.imagePath = "{{ leaflet_img|slice:":-28" }}";
-    {% endif %}
+    {% include "leaflet/_leaflet_image_path.html" %}
 {% endblock vars %}
