--- a/signmob/static/css/project.css
+++ b/signmob/static/css/project.css
@@ -8445,3 +8445,11 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: #f2dede;
   border-color: #eed3d7;
   color: #b94a48; }
+
+#detailmap {
+  width: 100%;
+  height: 40vh; }
+
+#smallmap {
+  width: 100%;
+  height: 300px; }
