--- a/signmob/collection/templates/collection/collectionevent_join.html
+++ b/signmob/collection/templates/collection/collectionevent_join.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  {% if members %}
+  {% if request.user.is_authenticated and members %}
     <h3>Bestätigte Teilnehmende</h3>
     {% get_event_gantt_chart object members request.user as gant_members %}
     <div class="w-100 clearfix">
@@ -39,25 +39,40 @@
             {{ gantt.member.user.name }}: {{ gantt.member.start|date:"TIME_FORMAT" }} - {{ gantt.member.end|date:"TIME_FORMAT" }}&nbsp;Uhr
           </p>
           {% if gantt.member.note %}<p>{{ gantt.member.note }}</p>{% endif %}
+          {% if gantt.member.user == request.user %}
+            <form class="text-right" method="post" action="{% url 'collection:collectionevent-cancel' pk=gantt.member.id %}">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-danger btn-sm">
+                Absagen
+              </button>
+            </form>
+          {% endif %}
         </div>
       {% endfor %}
     </div>
   {% endif %}
 
-  <div class="card mt-5 mb-5" id="report">
-    <div class="card-header">
-      <h3>Teilnehmen</h3>
+  {% if object.group %}
+    <div class="card mt-5 mb-5" id="report">
+      <div class="card-header">
+        <h3>Selbst teilnehmen</h3>
+      </div>
+      <div class="card-body">
+        {% if request.user.is_authenticated %}
+          <p class="lead">
+            Bitte sag uns, zu welchen Zeiten du am {{ object.start.date|date:"SHORT_DATE_FORMAT" }} teilnehmen kannst.
+          </p>
+          <form method="post" action=".">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-primary" type="submit">Teilnehmen &raquo;</button>
+          </form>
+        {% else %}
+          <a class="btn btn-primary" href="{{ object.group.get_absolute_url }}">
+            Der Sammelgruppe beitreten
+          </a>
+        {% endif %}
     </div>
-    <div class="card-body">
-      <p class="lead">
-        Bitte sag uns, zu welchen Zeiten du am {{ object.start.date|date:"SHORT_DATE_FORMAT" }} teilnehmen kannst.
-      </p>
-      <form method="post" action=".">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary" type="submit">Teilnehmen &raquo;</button>
-      </form>
-    </div>
-  </div>
+  {% endif %}
 
 {% endblock %}
