--- a/signmob/templates/schedule/_day_cell.html
+++ b/signmob/templates/schedule/_day_cell.html
@@ -3,7 +3,7 @@
   <td class="muted"></td>
 {% else %}
   {% if day.has_occurrences %}
-    <td class="btn-primary gradient">
+    <td class="has-occurence">
   {% else %}
     <td>
   {% endif %}
