--- a/signmob/templates/schedule/calendar_day.html
+++ b/signmob/templates/schedule/calendar_day.html
@@ -4,29 +4,31 @@
 {% block body %}
 
 {% include "schedule/_dialogs.html" %}
-<div class="row row-centered">
-  <a class="btn btn-primary gradient" href="{% url "week_calendar" calendar.slug %}{% querystring_for_date period.start 3 %}">
+<div class="">
+  <a class="btn btn-secondary" href="{% url "week_calendar" calendar.slug %}{% querystring_for_date period.start 3 %}">
     {% trans "Week" %}
   </a>
-  <a class="btn btn-primary gradient" href="{% url "month_calendar" calendar.slug %}{% querystring_for_date period.start 2 %}">
+  <a class="btn btn-secondary" href="{% url "month_calendar" calendar.slug %}{% querystring_for_date period.start 2 %}">
     {% trans "Month" %}
   </a>
-  <a class="btn btn-primary gradient" href="{% url "year_calendar" calendar.slug %}{% querystring_for_date period.start 1 %}">
+  <a class="btn btn-secondary" href="{% url "year_calendar" calendar.slug %}{% querystring_for_date period.start 1 %}">
     {% trans "Year" %}
   </a>
 </div>
-<div class="row row-centered">
+<div class="">
     <h1>{{ calendar.name }}</h1>
     {% prevnext "day_calendar" calendar period "l, F d, Y" %}
-    <div class="now">
-      <a class="btn btn-primary gradient" href="{% url "day_calendar" calendar.slug %}">
-        {% trans "Today" %}
-      </a>
-    </div>
 </div>
-  <div class="row row-centered">
+  <div class="">
     <div>
-      {% daily_table period %}
+      {% comment %} {% daily_table period %} {% endcomment %}
+      <ul>
+        {% for occ in period.get_occurrences %}
+          <li>
+            {{ occ.start|date:"TIME_FORMAT" }} bis {{ occ.end|date:"TIME_FORMAT" }} Uhr: {{ occ.title }}
+          </li>
+        {% endfor %}
+      </ul>
     </div>
 </div>
 
