--- a/signmob/collection/templates/collection/collectiongroup_detail.html
+++ b/signmob/collection/templates/collection/collectiongroup_detail.html
@@ -2,46 +2,60 @@
 
 {% load i18n %}
 {% load leaflet_tags %}
+{% load scheduletags %}
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h2 class="mt-3">Sammelgruppe „{{ object.name }}“</h2>
+  <h2 class="mt-3">
+    Sammelgruppe „{{ object.name }}“
+  </h2>
 
   <div class="row mt-3 mb-3">
     <div class="col-md-6">
+      {% if is_member %}
+        <span class="badge badge-success float-right">
+          Mitglied der Sammelgruppe
+        </span>
+      {% endif %}
+      <p>Diese Gruppe hat {{ member_count}} Mitglieder.</p>
       {% if object.description %}
         <p>{{ object.description }}</p>
       {% endif %}
+
       {% if events %}
-        <h3>Nächste Sammeltermine</h3>
+        <h4>Nächste Sammeltermine zum Mitmachen</h4>
         <ul>
           {% for event in events %}
             <li>
               <a href="{{ event.get_absolute_url }}">
-                {{ event }}
+                {{ event.start.date|date:"SHORT_DATE_FORMAT" }}</strong> ab {{ event.start|date:"TIME_FORMAT" }} Uhr: {{ event.name }}
               </a>
             </li>
           {% endfor %}
         </ul>
       {% endif %}
-      </div>
-      <div class="col-md-6">
-        {% if object.geo %}
-          {% leaflet_map "detailmap" callback="window.map_init_basic" %}
-        {% endif %}
-      </div>
     </div>
 
+    <div class="col-md-6">
+      {% if object.geo %}
+        {% leaflet_map "detailmap" callback="window.map_init_basic" %}
+      {% endif %}
+    </div>
+  </div>
+
   {% if request.user.is_authenticated %}
-    {% if is_member %}
-      <div class="alert alert-success">
-        Du bist Teil dieser Sammelgruppe!
-      </div>
-    {% else %}
+    {% if not is_member %}
       <form method="post" action="{% url 'collection:collectiongroup-join' pk=object.pk %}">
           {% csrf_token %}
           <button class="btn btn-primary" type="submit">Der Sammelgruppe beitreten &raquo;</button>
         </form>
+    {% else %}
+      <h3>Gruppenmitglieder</h3>
+      <ul>
+      {% for member in members %}
+          <li>{{ member.user }} {% if member.responsible %}<span class="badge badge-secondary">*</span>{% endif %}</li>
+      {% endfor %}
+      </ul>
     {% endif %}
   {% else %}
     <div class="card mt-5 mb-5">
@@ -53,7 +67,7 @@
           Du möchtest beim Sammeln der Unterschriften in dieser Gruppe helfen?
           Tritt der Gruppe bei und wir informieren dich über anstehende Termine.
         </p>
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        <form method="post" action="{% url 'collection:collectiongroup-join' pk=object.pk %}">
           {% csrf_token %}
           {{ signup_form|crispy }}
           <button class="btn btn-primary" type="submit">Der Sammelgruppe beitreten &raquo;</button>
@@ -61,6 +75,19 @@
       </div>
     </div>
   {% endif %}
+
+  {% if object.calendar %}
+    <h3>Terminübersicht dieser Gruppe</h3>
+    <div class="row">
+      <div class="col-12">
+        {% month_table object.calendar period "regular"  %}
+      </div>
+      <div class="col-12">
+        {% month_table calendar period "regular" 1 %}
+      </div>
+    </div>
+  {% endif %}
+
 {% endblock %}
 
 {% block css %}
