Add action button to homepage

--- a/signmob/collection/templates/collection/home.html
+++ b/signmob/collection/templates/collection/home.html
@@ -8,5 +8,14 @@
 
 <iframe src="https://karte.volksentscheid-transparenz.de/" style="width:100%; height: 60vh; border:0"></iframe>
 
+<div class="row">
+  <div class="col-4">
+    <a class="btn btn-primary btn-lg btn-block"  href="{% url 'collection:collectionlocation-create' %}">
+      Neuen Sammelort anlegen
+    </a>
+  </div>
+  <div class="col-6">
+  </div>
+</div>
 
 {% endblock content %}
