--- a/signmob/collection/templates/collection/collectiongroup_detail.html
+++ b/signmob/collection/templates/collection/collectiongroup_detail.html
@@ -3,7 +3,6 @@
 {% load i18n %}
 {% load leaflet_tags %}
 {% load scheduletags %}
-{% load crispy_forms_tags %}
 
 {% block content %}
   <h2 class="mt-3">
@@ -43,38 +42,16 @@
     </div>
   </div>
 
-  {% if request.user.is_authenticated %}
-    {% if not is_member %}
-      <form method="post" action="{% url 'collection:collectiongroup-join' pk=object.pk %}">
-          {% csrf_token %}
-          <button class="btn btn-primary" type="submit">Der Sammelgruppe beitreten &raquo;</button>
-        </form>
-    {% else %}
-      <h3>Gruppenmitglieder</h3>
-      <ul>
+  {% if request.user.is_authenticated and is_member %}
+    <h3>Gruppenmitglieder</h3>
+    <ul>
       {% for member in members %}
-          <li>{{ member.user }} {% if member.responsible %}<span class="badge badge-secondary">*</span>{% endif %}</li>
+        <li>{{ member.user }} {% if member.responsible %}<span class="badge badge-secondary">*</span>{% endif %}</li>
       {% endfor %}
-      </ul>
-    {% endif %}
-  {% else %}
-    <div class="card mt-5 mb-5">
-      <div class="card-header">
-        <h3>Tritt dieser Sammelgruppe bei</h3>
-      </div>
-      <div class="card-body">
-        <p>
-          Du möchtest beim Sammeln der Unterschriften in dieser Gruppe helfen?
-          Tritt der Gruppe bei und wir informieren dich über anstehende Termine.
-        </p>
-        <form method="post" action="{% url 'collection:collectiongroup-join' pk=object.pk %}">
-          {% csrf_token %}
-          {{ signup_form|crispy }}
-          <button class="btn btn-primary" type="submit">Der Sammelgruppe beitreten &raquo;</button>
-        </form>
-      </div>
-    </div>
+    </ul>
   {% endif %}
+
+  {% include "collection/_collectiongroup_join.html" %}
 
   {% if object.calendar %}
     <h3>Terminübersicht dieser Gruppe</h3>
