--- a/signmob/templates/schedule/calendar_week.html
+++ b/signmob/templates/schedule/calendar_week.html
@@ -1,11 +1,19 @@
 {% extends "schedule/base.html" %}
 {% load scheduletags i18n %}
 
-{% block body %}
+{% block main %}
 
-{% include "schedule/_dialogs.html" %}
+<div class="container-fluid">
 
-<div class="row row-centered">
+<h2>{{ calendar.name }}</h2>
+<div>
+<p>
+  {% trans "\W\e\ek W, M Y" as week_format %}
+  {% prevnext "week_calendar" calendar period week_format %}
+</p>
+</div>
+
+<div class="mb-3">
   <a href="{% url "month_calendar" calendar.slug %}{% querystring_for_date period.start 2 %}">
     {% trans "Month" %}
   </a>
@@ -14,24 +22,12 @@
   </a>
 </div>
 
-<div class="row row-centered">
-    <div>{{ calendar.name }}</div>
-    {% prevnext "week_calendar" calendar period "\W\e\ek W, M Y" %}
-    <div class="now">
-      <a href="{% url "week_calendar" calendar.slug %}">
-        {% trans "This week" %}
-      </a>
-    </div>
-</div>
-
-<div class="row row-centered">
+<div class="row">
   {% for day in period.get_days %}
-    <div class="col-md-3">
-      <div class="row row-centered">
+    <div class="col">
         <a href="{% url "day_calendar" calendar.slug %}{% querystring_for_date day.start 3 %}">
-          {{day.start|date:"l, d"}}
+          {{day.start|date:"l, d.m."}}
         </a>
-      </div>
       {% if forloop.first %}
           {% daily_table day %}
       {% else %}
@@ -41,4 +37,5 @@
   {% endfor %}
 </div>
 
+</div>
 {% endblock %}
