--- a/signmob/templates/schedule/_prevnext.html
+++ b/signmob/templates/schedule/_prevnext.html
@@ -1,5 +1,5 @@
 {% load scheduletags staticfiles %}
-<div class="row row-centered">
+<div class="">
     {% prev_url target calendar period %}
     &nbsp; <b>{{period_name}}</b> &nbsp;
     {% next_url target calendar period %}
