--- a/signmob/templates/schedule/calendar_year.html
+++ b/signmob/templates/schedule/calendar_year.html
@@ -1,27 +1,37 @@
 {% extends "schedule/base.html" %}
 {% load scheduletags i18n %}
-{% block body %}
-<div class="tablewrapper">
-    <div class="calendarname">{{ calendar.name }}</div>
+
+{% block main %}
+
+<div class="container-fluid">
+
+  <h2>{{ calendar.name }}</h2>
+
+  <div class="text-center">
     {% prevnext "year_calendar" calendar period "Y" %}
-    <div class="content">
-      {% for month in period.get_months %}
-        <div class="col-md-3">
-          <div class="row row-centered">
-            <button class="btn btn-custom active" href="{% url "month_calendar" calendar.slug %}{% querystring_for_date month.start 2 %}">{{month.name}}</button>
-          </div>
-          <div>
-            {% month_table calendar month "small" %}
-          </div>
-        </div>
-      {% endfor %}
-    </div>
-<div class="navigation">
-  <a href="{% url "month_calendar" calendar.slug %}">
-    {% trans "Current Month Calendar" %}
-  </a>
-  <a href="{% url "year_calendar" calendar.slug %}">
-    {% trans "Current Year Calendar" %}
-  </a>
+  </div>
+
+  <div class="row">
+    {% for month in period.get_months %}
+      <div class="col-xl-4 col-lg-6 col-md-12">
+        {% month_table calendar month "small" %}
+      </div>
+    {% endfor %}
+  </div>
+
+  <div class="navigation mb-5">
+    <ul>
+      <li>
+        <a href="{% url "month_calendar" calendar.slug %}">
+          {% trans "Current Month Calendar" %}
+        </a>
+      </li>
+      <li>
+        <a href="{% url "year_calendar" calendar.slug %}">
+          {% trans "Current Year Calendar" %}
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
 {% endblock %}
