--- a/signmob/templates/users/user_detail.html
+++ b/signmob/templates/users/user_detail.html
@@ -19,8 +19,14 @@
 <div class="row">
 
   <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
+    <ul>
+      <li>
+        <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">Name oder Handynr. ändern</a>
+      </li>
+      <li>
+        <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail ändern oder hinzufügen</a>
+      </li>
+    </ul>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
