--- a/signmob/templates/users/user_form.html
+++ b/signmob/templates/users/user_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load leaflet_tags %}
 
 {% block title %}{{ user.name }}{% endblock %}
 
@@ -14,4 +15,18 @@
       </div>
     </div>
   </form>
+{% endblock %}
+
+
+{% block css %}
+  {{ block.super }}
+  {% leaflet_css plugins="forms" %}
+{% endblock %}
+
+{% block javascript %}
+  {{ block.super }}
+  {% leaflet_js plugins="forms" %}
+  <script>
+    {% include "leaflet/_leaflet_image_path.html" %}
+  </script>
 {% endblock %}
