--- a/signmob/templates/base.html
+++ b/signmob/templates/base.html
@@ -1,5 +1,5 @@
 {% load static i18n %}<!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
