--- a/signmob/templates/base.html
+++ b/signmob/templates/base.html
@@ -50,6 +50,12 @@
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'users:detail' %}">{% trans "My Profile" %}</a>
               </li>
+              {% if request.user.is_staff %}
+                <li class="nav-item">
+                  {# URL provided by django-allauth/account/urls.py #}
+                  <a class="nav-link" href="{% url 'admin:index' %}">{% trans "Admin" %}</a>
+                </li>
+              {% endif %}
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
