--- a/signmob/templates/base.html
+++ b/signmob/templates/base.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-
+    {% block container %}
     <header class="mb-1">
       <nav class="navbar navbar-expand-md navbar-light bg-light">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,9 +93,9 @@
       {% endblock main %}
 
     </main> <!-- /container -->
-
     {% block modal %}{% endblock modal %}
 
+    {% endblock container %}
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
