Fix occurrence detail view

--- a/signmob/templates/schedule/three_weeks.html
+++ b/signmob/templates/schedule/three_weeks.html
@@ -11,7 +11,7 @@
           <h5 class="text-left">{{ occ.title }}</h5>
           <p>
             {{ occ.description }}
-            <a href="{{ occ.event.get_absolute_url }}" target="_blank" rel="noopener">
+            <a href="{{ occ.get_absolute_url }}" target="_blank" rel="noopener">
               <span class="sr-only">Mehr erfahren</span>
               &rarr;
             </a>
