--- a/signmob/templates/schedule/three_weeks.html
+++ b/signmob/templates/schedule/three_weeks.html
@@ -3,11 +3,11 @@
   <div class="container-fluid">
     <div class="row">
       {% for occ in period.get_occurrences %}
-        <div class="col-2">
-          <strong>{{ occ.start|date:"SHORT_DATE_FORMAT" }}</strong><br/>
+        <div class="col-auto">
+          <strong>{{ occ.start|date:"d.m." }}</strong><br/>
           {{ occ.start|date:"TIME_FORMAT" }}
         </div>
-        <div class="col-10">
+        <div class="col">
           <h5 class="text-left">{{ occ.title }}</h5>
           <p>
             {{ occ.description }}
