--- a/signmob/collection/templates/collection/collectionlocation_report.html
+++ b/signmob/collection/templates/collection/collectionlocation_report.html
@@ -7,6 +7,10 @@
 {% block content %}
   <h2 class="mt-3">Problem am Sammelort „{{ object.name }}“</h2>
 
+  {% if request.user.is_staff %}
+    <a href="{{ object.get_domain_admin_url }}">Im Admin</a>
+  {% endif %}
+
   <div class="row mt-3 mb-3">
     <div class="col-md-6">
       <p>{{ object.address|linebreaksbr }}</p>
