--- a/signmob/collection/templates/collection/collectiongroup_detail.html
+++ b/signmob/collection/templates/collection/collectiongroup_detail.html
@@ -60,7 +60,7 @@
         {% month_table object.calendar period "regular"  %}
       </div>
       <div class="col-12">
-        {% month_table calendar period "regular" 1 %}
+        {% month_table object.calendar period "regular" 1 %}
       </div>
     </div>
   {% endif %}
