--- a/signmob/collection/templates/collection/collectiongroup_detail.html
+++ b/signmob/collection/templates/collection/collectiongroup_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <h2 class="mt-3">
-    Sammelgruppe „{{ object.name }}“
+    Team „{{ object.name }}“
   </h2>
 
   <div class="row mt-3 mb-3">
