--- a/signmob/static/sass/project.scss
+++ b/signmob/static/sass/project.scss
@@ -77,3 +77,7 @@ td.has-occurence {
 .glyphicon.glyphicon-circle-arrow-left::after {
   content: "<-"
 }
+
+.invalid-feedback {
+  display: block !important
+}
