--- a/signmob/collection/templates/collection/collectionlocation_report.html
+++ b/signmob/collection/templates/collection/collectionlocation_report.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h2 class="mt-3">Problem am Sammelort „{{ object.name }}“</h2>
+  <h2 class="mt-3">Sammelort „{{ object.name }}“</h2>
 
   {% if request.user.is_staff %}
     <a href="{{ object.get_domain_admin_url }}">Im Admin</a>
